adicionando tela home com crud de transações

--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
     "api": "json-server --watch db.json --port 3001"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.1.0",
+    "@mui/material": "^7.1.0",
+    "@rschpdr/react-money-input": "^1.0.0",
     "axios": "^1.8.4",
+    "date-fns": "^4.1.0",
     "next": "15.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "styled-components": "^6.1.17"
+    "react-number-format": "^5.4.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
