--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-plugin-styled-components": "^2.1.4",
     "eslint": "^9",
     "eslint-config-next": "15.3.0",
+    "json-server": "^1.0.0-beta.3",
     "typescript": "^5"
   }
 }
