--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "concurrently": "^9.1.2",
     "eslint": "^9",
     "eslint-config-next": "15.3.0",
+    "json-server": "^0.17.3",
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
