--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "frontend-tech-challenge",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "scripts": {
     "dev": "concurrently \"npm:dev:prepare-server-json\" \"npm:dev:next\" \"npm:dev:json\"",
     "dev:prepare-server-json": "node scripts/initServerJson.js",
-    "dev:next": "NODE_OPTIONS='--inspect' next dev --port 3000 --turbopack",
+    "dev:next": "set NODE_OPTIONS=--inspect && next dev --port 3000 --turbopack",
     "dev:json": "json-server --watch db/server.json --port 3001",
     "build": "next build",
     "start": "next start",
@@ -17,7 +17,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
-    "@rschpdr/react-money-input": "^1.0.0",
+    "@rschpdr/react-money-input": "^0.1.3",
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
     "next": "15.3.0",
