--- a/vercel.json
+++ b/vercel.json
@@ -11,7 +11,8 @@
   ],
   "routes": [
     {
-      "src": "/(.*)",
+      "src": "/api/(.*)",
       "dest": "scripts/initServerJson.js"
     }
   ]
+}
