--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.1.0",
-    "@mui/material": "^7.1.0",
+    "@mui/material": "^7.1.2",
+    "@mui/system": "^7.1.1",
     "@rschpdr/react-money-input": "^0.1.3",
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
@@ -24,6 +25,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-number-format": "^5.4.4",
+    "recharts": "^2.15.3",
     "uuid": "^11.1.0",
     "zustand": "^5.0.4"
   },
