--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/system": "^7.1.1",
     "@rschpdr/react-money-input": "^0.1.3",
     "axios": "^1.9.0",
+    "bcrypt": "^6.0.0",
     "date-fns": "^4.1.0",
     "next": "15.3.0",
     "react": "^19.0.0",
