--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "version": "0.1.1",
   "private": true,
   "scripts": {
-    "dev": "concurrently \"npm:dev:prepare-server-json\" \"npm:dev:next\" \"npm:dev:json\"",
-    "dev:prepare-server-json": "node scripts/initServerJson.js",
-    "dev:next": "set NODE_OPTIONS=--inspect && next dev --port 3000 --turbopack",
-    "dev:json": "json-server --watch db/server.json --port 3001",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "next dev",
+    "build:next": "next build",
+    "start:next": "next start",
+    "start": "webpack serve",
+    "start:standalone": "webpack serve --env standalone",
+    "build": "concurrently npm:build:*",
+    "build:webpack": "webpack --mode=production",
+    "analyze": "webpack --mode=production --env analyze",
+    "lint": "eslint src app components --ext js,ts,tsx",
+    "test": "jest",
+    "type-check": "tsc --noEmit"
   },
   "type": "module",
   "dependencies": {
@@ -30,20 +34,36 @@
     "zustand": "^5.0.4"
   },
   "devDependencies": {
+    "@babel/core": "^7.28.0",
+    "@babel/plugin-transform-runtime": "^7.28.0",
+    "@babel/preset-env": "^7.28.0",
+    "@babel/preset-react": "^7.27.1",
+    "@babel/preset-typescript": "^7.27.1",
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
     "@types/uuid": "^10.0.0",
+    "babel-loader": "^10.0.0",
     "babel-plugin-styled-components": "^2.1.4",
-    "concurrently": "^9.1.2",
+    "buffer": "^6.0.3",
+    "concurrently": "^9.2.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.0",
     "json-server": "^0.17.3",
+    "process": "^0.11.10",
     "tailwindcss": "^4",
+    "ts-config-single-spa": "^3.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
-    "zod": "^3.25.4"
+    "webpack": "^5.100.2",
+    "webpack-cli": "^6.0.1",
+    "webpack-config-single-spa-react-ts": "^8.0.0",
+    "webpack-dev-server": "^5.2.2",
+    "webpack-merge": "^6.0.1",
+    "zod": "^3.25.4",
+    "single-spa": "^5.9.3",
+    "single-spa-react": "^6.0.2"
   }
 }
