--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.1",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "concurrently \"npm:dev:prepare-server-json\" \"npm:dev:next\" \"npm:dev:json\"",
+    "dev:prepare-server-json": "node scripts/initServerJson.js",
+    "dev:next": "set NODE_OPTIONS=--inspect && next dev --port 3000",
+    "dev:json": "json-server --watch db/server.json --port 3001",
     "build": "next build",
     "start:next": "next start",
     "start": "webpack serve",
@@ -24,6 +27,7 @@
     "@rschpdr/react-money-input": "^0.1.3",
     "axios": "^1.9.0",
     "bcrypt": "^6.0.0",
+    "cookie": "^1.0.2",
     "date-fns": "^4.1.0",
     "next": "15.3.0",
     "react": "^19.0.0",
@@ -41,6 +45,8 @@
     "@babel/preset-typescript": "^7.27.1",
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/bcrypt": "^6.0.0",
+    "@types/cookie": "^1.0.0",
     "@types/node": "^20",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
@@ -53,6 +59,8 @@
     "eslint-config-next": "15.3.0",
     "json-server": "^0.17.3",
     "process": "^0.11.10",
+    "single-spa": "^5.9.3",
+    "single-spa-react": "^6.0.2",
     "tailwindcss": "^4",
     "ts-config-single-spa": "^3.0.0",
     "ts-node": "^10.9.2",
@@ -62,8 +70,6 @@
     "webpack-config-single-spa-react-ts": "^8.0.0",
     "webpack-dev-server": "^5.2.2",
     "webpack-merge": "^6.0.1",
-    "zod": "^3.25.4",
-    "single-spa": "^5.9.3",
-    "single-spa-react": "^6.0.2"
+    "zod": "^3.25.4"
   }
 }
