--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "dev:prepare-server-json": "node scripts/initServerJson.js",
     "dev:next": "set NODE_OPTIONS=--inspect && next dev --port 3000 --turbopack",
     "dev:json": "json-server --watch db/server.json --port 3001",
-    "build": "next build",
+    "build": "next build --no-lint",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "chmod 666 ./db/server.json ./db/users.json 2>/dev/null || true"
   },
   "type": "module",
   "dependencies": {
@@ -21,6 +22,7 @@
     "@rschpdr/react-money-input": "^0.1.3",
     "axios": "^1.9.0",
     "bcrypt": "^6.0.0",
+    "cookie": "^1.0.2",
     "date-fns": "^4.1.0",
     "next": "15.3.0",
     "react": "^19.0.0",
@@ -33,6 +35,8 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/bcrypt": "^6.0.0",
+    "@types/cookie": "^0.6.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
