--- a/nginx.conf
+++ b/nginx.conf
@@ -29,15 +29,25 @@ http {
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
+      proxy_set_header X-Forwarded-Host $host;
+      proxy_set_header X-Forwarded-Port $server_port;
+      
+      # Cookie preservation
+      proxy_cookie_path / /;
+      proxy_cookie_domain ~^(.*)$ $1;
 
-      # CORS headers
-      add_header 'Access-Control-Allow-Origin' '*' always;
-      add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
-      add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization' always;
-      add_header 'Access-Control-Allow-Credentials' 'true' always;
+      # CORS headers - comentados para evitar duplicação com Next.js
+      # add_header 'Access-Control-Allow-Origin' '$http_origin' always;
+      # add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+      # add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization, Cookie' always;
+      # add_header 'Access-Control-Allow-Credentials' 'true' always;
 
       # Handle preflight requests
       if ($request_method = OPTIONS) {
+        add_header 'Access-Control-Allow-Origin' '$http_origin' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization, Cookie' always;
+        add_header 'Access-Control-Allow-Credentials' 'true' always;
         add_header 'Access-Control-Max-Age' 1728000;
         add_header 'Content-Type' 'text/plain charset=UTF-8';
         add_header 'Content-Length' 0;
@@ -61,6 +71,12 @@ http {
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
+      proxy_set_header X-Forwarded-Host $host;
+      proxy_set_header X-Forwarded-Port $server_port;
+      
+      # Cookie preservation
+      proxy_cookie_path / /;
+      proxy_cookie_domain ~^(.*)$ $1;
     }
   }
 }
