fix: nginx serve mfe bundle file

--- a/nginx.conf
+++ b/nginx.conf
@@ -63,6 +63,15 @@ http {
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
     }
+    
+    # Serve o bundle do microfrontend diretamente
+    location /postech-analytics.js {
+      proxy_pass http://analytics_mfe/postech-analytics.js;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+    }
 
     # Serve Next.js app for all other routes
     location / {
