--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@mui/system": "^7.1.1",
     "@rschpdr/react-money-input": "^0.1.3",
     "axios": "^1.9.0",
+    "jose": "^5.9.3",
     "bcrypt": "^6.0.0",
     "date-fns": "^4.1.0",
     "next": "15.3.0",
