--- a/packages/shared-services/package.json
+++ b/packages/shared-services/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@banking/shared-types": "workspace:*",
+    "@banking/shared-utils": "workspace:*",
     "axios": "^1.9.0",
     "uuid": "^10.0.0",
     "zod": "^3.23.8"
