--- a/packages/shared-utils/package.json
+++ b/packages/shared-utils/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "main": "src/index.ts",
   "types": "src/index.ts",
+  "sideEffects": false,
   "scripts": {
     "build": "tsc",
     "typecheck": "tsc --noEmit"
