--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -49,10 +49,20 @@ http {
         server json-server:3001;
     }
 
-    # Main server configuration
+    # HTTP -> HTTPS redirect
     server {
         listen 80;
         server_name localhost;
+        return 301 https://$host$request_uri;
+    }
+
+    # Main server configuration (HTTPS)
+    server {
+        listen 443 ssl;
+        server_name localhost;
+
+        ssl_certificate     /etc/nginx/certs/selfsigned.crt;
+        ssl_certificate_key /etc/nginx/certs/selfsigned.key;
 
         # Security headers
         add_header X-Frame-Options "SAMEORIGIN" always;
